--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,19 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>QLearner</name>
   <description>A simple implementation of the q-learning algorithm</description>
+  <build>
+      <pluginManagement>
+          <plugins>
+              <plugin>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>3.1</version>
+                  <configuration>
+                      <source>1.7</source>
+                      <target>1.7</target>
+                      <compilerArgument></compilerArgument>
+                  </configuration>
+              </plugin>
+          </plugins>
+      </pluginManagement>
+  </build>
 </project>
