--- a/pom.xml
+++ b/pom.xml
@@ -1,56 +1,68 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>io.github.cantido</groupId>
-  <artifactId>qlearner</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>QLearner</name>
-  <description>A simple implementation of the q-learning algorithm</description>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <build>
-      <pluginManagement>
-          <plugins>
-              <plugin>
-                  <artifactId>maven-compiler-plugin</artifactId>
-                  <version>3.1</version>
-                  <configuration>
-                      <source>1.7</source>
-                      <target>1.7</target>
-                      <compilerArgument></compilerArgument>
-                  </configuration>
-              </plugin>
-          </plugins>
-      </pluginManagement>
-  </build>
-  <issueManagement>
-    <system>Github</system>
-    <url>https://github.com/Cantido/qlearner/issues</url>
-  </issueManagement>
-  <ciManagement>
-    <system>travis-ci</system>
-    <url>https://travis-ci.org/Cantido/qlearner</url>
-  </ciManagement>
-  <scm>
-    <connection>scm:git:https://github.com/Cantido/qlearner.git</connection>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>io.github.cantido</groupId>
+    <artifactId>qlearner</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>QLearner</name>
+    <description>A simple implementation of the q-learning algorithm</description>
     <url>https://github.com/Cantido/qlearner</url>
-  </scm>
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.1</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                        <compilerArgument></compilerArgument>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/Cantido/qlearner/issues</url>
+    </issueManagement>
+    <ciManagement>
+        <system>travis-ci</system>
+        <url>https://travis-ci.org/Cantido/qlearner</url>
+    </ciManagement>
+    <scm>
+        <connection>scm:git:https://github.com/Cantido/qlearner.git</connection>
+        <url>https://github.com/Cantido/qlearner</url>
+        <developerConnection>scm:git:https://github.com/Cantido/qlearner.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        <!-- Hamcrest needs to come before Junit in the build path, or else we'll 
+            get a SecurityException from the classes that are in both Hamcrest and Junit -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-integration</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
