--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,9 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.2</version>
         </dependency>
-        <!-- Hamcrest needs to come before Junit in the build path, or else we'll 
-            get a SecurityException from the classes that are in both Hamcrest and Junit -->
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-integration</artifactId>
+            <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
