--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <name>QLearner</name>
     <description>A simple implementation of the q-learning algorithm</description>
     <url>https://github.com/Cantido/qlearner</url>
+    <licenses>
+        <license>
+            <name>GNU General Public License, Version 3</name>
+            <url>http://www.gnu.org/licenses/gpl.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
