Fix dependency types

--- a/gridword/pom.xml
+++ b/gridword/pom.xml
@@ -3,12 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>gridworld</artifactId>
     <parent>
         <artifactId>qlearner</artifactId>
         <groupId>io.github.cantido</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <artifactId>gridworld</artifactId>
+    <name>Grid World QLearner Example</name>
+    <description>An example of the QLearning project</description>
     <build>
         <plugins>
             <plugin>
