--- a/qlearner-core/pom.xml
+++ b/qlearner-core/pom.xml
@@ -1,14 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>qlearner-core</artifactId>
-	<packaging>pom</packaging>
 	<parent>
 		<groupId>io.github.cantido</groupId>
 		<artifactId>qlearner</artifactId>
         <version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<name>QLearner</name>
+	<artifactId>qlearner-core</artifactId>
+	<name>QLearner Core</name>
 	<description>A simple implementation of the q-learning algorithm</description>
 	<build>
 		<plugins>
