--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 		<system>travis-ci</system>
 		<url>https://travis-ci.org/Cantido/qlearner</url>
 	</ciManagement>
+	<distributionManagement>
+		<site>
+			<id>github</id>
+			<url>https://github.com/Cantido/qlearner/tree/gh-pages</url>
+		</site>
+	</distributionManagement>
 	<scm>
 		<connection>scm:git:https://github.com/Cantido/qlearner.git</connection>
 		<url>https://github.com/Cantido/qlearner</url>
@@ -65,24 +71,6 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>site-maven-plugin</artifactId>
-				<version>0.12</version>
-				<configuration>
-					<server>github</server>
-					<message>Creating site for ${project.version}</message>
-					<merge>true</merge>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>site</goal>
-						</goals>
-						<phase>site-deploy</phase>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -114,10 +102,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.2</version>
-				<configuration>
-				<!-- Skip site-deploy because we are using GitHub to deploy -->
-					<skipDeploy>true</skipDeploy>
-				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.doxia</groupId>
