--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
 	PURPOSE. See the ~ GNU General Public License for more details. ~ ~ You should 
 	have received a copy of the GNU General Public License ~ along with QLearner. 
 	If not, see <http://www.gnu.org/licenses/>. -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -20,8 +19,7 @@
 		<module>qlearner-core</module>
 	</modules>
 	<name>QLearner</name>
-	<description>A simple implementation of the q-learning algorithm
-    </description>
+	<description>A simple implementation of the q-learning algorithm.</description>
 	<url>https://github.com/Cantido/qlearner</url>
 	<licenses>
 		<license>
@@ -35,6 +33,13 @@
 		<url>https://github.com/Cantido</url>
 	</organization>
 	<inceptionYear>2012</inceptionYear>
+	<developers>
+		<developer>
+			<id>cantido</id>
+			<name>Robert Richter</name>
+			<url>https://github.com/Cantido</url>
+		</developer>
+	</developers>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<license.licenseName>gpl_v3</license.licenseName>
@@ -55,10 +60,11 @@
 		</site>
 	</distributionManagement>
 	<scm>
-		<connection>scm:git:https://github.com/Cantido/qlearner.git</connection>
 		<url>https://github.com/Cantido/qlearner</url>
-		<developerConnection>scm:git:https://github.com/Cantido/qlearner.git
-        </developerConnection>
+		<connection>scm:git:https://github.com/Cantido/qlearner.git</connection>
+		<developerConnection>
+			scm:git:https://github.com/Cantido/qlearner.git
+		</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 	<build>
@@ -146,19 +152,16 @@
 				<groupId>org.hamcrest</groupId>
 				<artifactId>hamcrest-all</artifactId>
 				<version>1.3</version>
-				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.12</version>
-				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
 				<version>2.0.2-beta</version>
-				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.findbugs</groupId>
@@ -176,26 +179,32 @@
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>jsr305</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>annotations</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
