--- a/qlearner-core/pom.xml
+++ b/qlearner-core/pom.xml
@@ -38,6 +38,10 @@
 			<artifactId>commons-math3</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<scope>test</scope>
