Add Failsafe plugin for integration tests

--- a/qlearner-core/pom.xml
+++ b/qlearner-core/pom.xml
@@ -28,6 +28,23 @@
 	<artifactId>qlearner-core</artifactId>
 	<name>QLearner Core</name>
 	<description>A simple implementation of the q-learning algorithm</description>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.19.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
